[package]
authors = ["Brian Smith <brian@briansmith.org>"]
description = "Safe, fast, zero-panic, zero-crashing, zero-allocation parsing of untrusted inputs in Rust."
documentation = "https://briansmith.org/rustdoc/untrusted/"
edition = "2018"
license = "ISC"
name = "untrusted"
readme = "README.md"
repository = "https://github.com/briansmith/untrusted"
version = "0.7.0"

[lib]
name = "untrusted"
path = "src/untrusted.rs"

[profile.bench]
opt-level = 2
lto = true
